WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
112556
[BlackBerry] EditorClientBlackBerry: fix access to WebPage attribute
https://bugs.webkit.org/show_bug.cgi?id=112556
Summary
[BlackBerry] EditorClientBlackBerry: fix access to WebPage attribute
Alberto Garcia
Reported
2013-03-18 04:14:54 PDT
This broke in
r145849
Attachments
Patch
(1.91 KB, patch)
2013-03-18 04:15 PDT
,
Alberto Garcia
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alberto Garcia
Comment 1
2013-03-18 04:15:49 PDT
Created
attachment 193524
[details]
Patch
Rob Buis
Comment 2
2013-03-18 04:24:51 PDT
Comment on
attachment 193524
[details]
Patch Ok.
WebKit Review Bot
Comment 3
2013-03-18 06:46:06 PDT
Comment on
attachment 193524
[details]
Patch Clearing flags on attachment: 193524 Committed
r146061
: <
http://trac.webkit.org/changeset/146061
>
WebKit Review Bot
Comment 4
2013-03-18 06:46:10 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug