[BlackBerry] EditorClientBlackBerry: fix access to WebPage attribute https://bugs.webkit.org/show_bug.cgi?id=112556

Patch by Alberto Garcia <agarcia@igalia.com> on 2013-03-18
Reviewed by Rob Buis.

This changed in r145849 and broke the BlackBerry build.

* WebCoreSupport/EditorClientBlackBerry.cpp:
(WebCore::EditorClientBlackBerry::smartInsertDeleteEnabled):
(WebCore::EditorClientBlackBerry::isSelectTrailingWhitespaceEnabled):

git-svn-id: svn://svn.chromium.org/blink/trunk@146061 bbb929c8-8fbe-4397-9dbb-9b2b20218538